Assesment changes and radiology chabges done

--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
@@ -16,4 +16,10 @@
     padding-top: 20px;
     cursor: pointer;
   }
+
+  .go-button {
+    cursor: pointer;
+    margin-bottom: -15px;
+    margin-top: -10px;
+  }
 }
