--- a/client/src/Components/Radiology/RadResultEntry/RadResultEntry.css
+++ b/client/src/Components/Radiology/RadResultEntry/RadResultEntry.css
@@ -90,7 +90,7 @@
       display: block;
       margin-bottom: 5px; }
 
-.form-group {
+.form-row-gap {
   padding-top: 5px; }
 
 .editor .quill .ql-container {
