--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.css
@@ -12,3 +12,7 @@
     padding: 0;
     padding-top: 20px;
     cursor: pointer; }
+  .hptl-phase1-ordering-services-form .go-button {
+    cursor: pointer;
+    margin-bottom: -15px;
+    margin-top: -10px; }
