--- a/client/src/Components/PatientProfile/Subjective/subjective.css
+++ b/client/src/Components/PatientProfile/Subjective/subjective.css
@@ -7,6 +7,16 @@
 .subjective tr {
   text-align: center; }
 
+.subjective .customTable th {
+  background: #ebfffd;
+  text-transform: uppercase;
+  font-size: 0.7rem !important;
+  min-width: auto !important; }
+
+.subjective .customTable td {
+  min-width: auto !important;
+  font-size: 0.8rem !important; }
+
 .pain_slider {
   margin: 0;
   margin-top: 10px;
