--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -28,7 +28,8 @@ div[numberbox="true"] input[type="text"] {
 .algaeh-datePicker {
   border: 1px solid #d3d3d3;
   max-width: 100%;
-  padding-left: 6px; }
+  padding-left: 6px;
+  border-radius: 4px; }
   .algaeh-datePicker .react-date-picker__button {
     border: none;
     line-height: 1.94em; }
