--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -40,6 +40,7 @@ div[numberbox="true"] {
   border: 1px solid #d3d3d3;
   max-width: 100%;
   padding-left: 6px;
+  border-radius: 4px;
   .react-date-picker__button {
     border: none;
 
