--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -122,7 +122,7 @@
 .hptl-phase1-footer .main {
   background-color: #000000 !important;
   border-top: 1px solid #0000;
-  padding: 10px;
+  padding: 4px 15px;
   height: 40px;
   width: 100%;
   position: fixed;
