--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -441,8 +441,15 @@ label {
 
 input[type="text"] {
   font-size: 0.85rem;
-  padding: 7px 6px 6px;
-  border: 1px solid #d3d3d3; }
+  padding: 8px 6px 7px;
+  border: 1px solid #d3d3d3;
+  border-radius: 4px; }
+
+textarea {
+  font-size: 0.85rem !important;
+  padding: 8px 6px 7px !important;
+  border: 1px solid #d3d3d3 !important;
+  border-radius: 4px !important; }
 
 .DayPickerInput {
   border-bottom: 1px dashed #000; }
