--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -559,8 +559,16 @@ label {
 
 input[type="text"] {
   font-size: $textFontSize;
-  padding: 7px 6px 6px;
+  padding: 8px 6px 7px;
   border: 1px solid #d3d3d3;
+  border-radius: 4px;
+}
+
+textarea {
+  font-size: $textFontSize !important;
+  padding: 8px 6px 7px !important;
+  border: 1px solid #d3d3d3 !important;
+  border-radius: 4px !important;
 }
 
 .DayPickerInput {
