--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.css
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.css
@@ -6,3 +6,63 @@
 
 .physical_examination .vitalTopFld25 {
   width: 25%; }
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: auto;
+  margin: 0 auto;
+  /* timelineContainer around content */
+  /* The circles on the timeline */
+  /* Place the container to the right */ }
+  .timeline .timelineContainer {
+    padding: 5px 0 10px 5px;
+    position: relative;
+    width: 90%; }
+  .timeline .timelineContainer::after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #2ebcb0;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1; }
+  .timeline .right {
+    left: 10px; }
+  .timeline .content {
+    position: relative;
+    padding: 4px 0 0 16px; }
+    .timeline .content .dateStamp {
+      font-size: 0.8rem; }
+    .timeline .content ul.vitals-box {
+      margin: 0;
+      padding: 0;
+      list-style: none; }
+      .timeline .content ul.vitals-box li.each-vitals-box {
+        margin: 5px 0 0;
+        padding: 5px 10px;
+        list-style: none;
+        border: 2px solid #cecece;
+        border-radius: 5px; }
+        .timeline .content ul.vitals-box li.each-vitals-box p {
+          font-size: 0.9rem;
+          margin: 0;
+          padding: 0;
+          margin-bottom: 10px; }
+        .timeline .content ul.vitals-box li.each-vitals-box span:first-child {
+          font-size: 1.5rem; }
+        .timeline .content ul.vitals-box li.each-vitals-box span:last-child {
+          text-align: right;
+          margin-left: 5px; }
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  top: 0;
+  bottom: 0;
+  left: 22px;
+  margin-left: -3px;
+  background: #cecece; }
