--- a/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
+++ b/client/src/Components/RegistrationPatient/ConsultationDetails/ConsultationForm/ConsultationForm.css
@@ -5,13 +5,14 @@
   border-top-right-radius: 5px; }
 
 .hptl-phase1-add-consultation-form .primary-details {
-  border-right: 1px solid #000; }
+  border-right: 1px dashed #d3d3d3;
+  padding-top: 8px; }
   .hptl-phase1-add-consultation-form .primary-details .primary-box-container .radio-design {
     position: absolute;
     margin-left: 5px; }
 
 .hptl-phase1-add-consultation-form .secondary-details {
-  padding: 5px; }
+  padding-top: 8px; }
   .hptl-phase1-add-consultation-form .secondary-details .secondary-box-container {
     padding: 5px; }
 
