--- a/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
+++ b/client/src/Components/RegistrationPatient/InsuranceDetails/InsuranceForm/InsuranceForm.scss
@@ -5,9 +5,8 @@
 
 .htpl-phase1-primary-insurance-form {
   .primary-details {
-    //padding: 5px;
-    padding-bottom: 15px;
-    border-right: 1px solid #000;
+    padding-top: 8px;
+    border-right: 1px dashed #d3d3d3;
   }
 
   mark {
@@ -57,8 +56,7 @@
   }
 
   .secondary-details {
-    //padding-top: 5px;
-    padding-bottom: 15px;
+    padding-top: 8px;
     .secondary-box-container {
       // padding: 5px;
       .attach-design {
