--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.css
@@ -3,7 +3,8 @@
   border-radius: 5px; }
 
 .hptl-phase1-add-patient-form .primary-details {
-  border-right: 1px solid #000; }
+  border-right: 1px dashed #d3d3d3;
+  padding-top: 8px; }
 
 .hptl-phase1-add-patient-form mark {
   background: none;
@@ -17,16 +18,17 @@
   background-color: #fbfbfb;
   margin-right: "5px"; }
 
-.hptl-phase1-add-patient-form .secondary-details .secondary-box-container .attach-design {
-  background: #8c8c8c;
-  color: #fff;
-  position: relative;
-  cursor: pointer;
-  margin-left: -1px;
-  margin-right: -1px; }
-
-.hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
-  position: absolute;
-  top: -1px;
-  left: 15px;
-  height: 101px; }
+.hptl-phase1-add-patient-form .secondary-details {
+  padding-top: 8px; }
+  .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .attach-design {
+    background: #8c8c8c;
+    color: #fff;
+    position: relative;
+    cursor: pointer;
+    margin-left: -1px;
+    margin-right: -1px; }
+  .hptl-phase1-add-patient-form .secondary-details .secondary-box-container .preview-image {
+    position: absolute;
+    top: -1px;
+    left: 15px;
+    height: 101px; }
