input-text and select dropdown ui tweak

--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -562,6 +562,7 @@ input[type="text"] {
   padding: 8px 6px 7px;
   border: 1px solid #d3d3d3;
   border-radius: 4px;
+  background: #fff;
 }
 
 textarea {
