--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,12 @@
     height: 40px;
     cursor: pointer;
     margin-top: 10px; }
+  :global .btn-primary {
+    background-color: #00bcb0;
+    border: #00bcb0; }
+  :global .btn-primary:hover {
+    background-color: #00bcb0;
+    border: #00bcb0; }
   :global .btn-primary:not(:disabled):not(.disabled).active,
   :global .btn-primary:not(:disabled):not(.disabled):active,
   :global .show > .btn-primary.dropdown-toggle {
