--- a/client/src/Components/PatientProfile/Plan/plan.css
+++ b/client/src/Components/PatientProfile/Plan/plan.css
@@ -7,6 +7,7 @@
 .plan .grid-section {
   border: 1px solid #d3d3d3;
   margin-top: 0px;
+  background: #ffff;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px; }
