--- a/client/src/Components/PatientProfile/Plan/plan.scss
+++ b/client/src/Components/PatientProfile/Plan/plan.scss
@@ -8,6 +8,7 @@
   .grid-section {
     border: 1px solid #d3d3d3;
     margin-top: 0px;
+    background: #ffff;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
