--- a/client/src/Components/PatientProfile/Assessment/assessment.css
+++ b/client/src/Components/PatientProfile/Assessment/assessment.css
@@ -1,6 +1,7 @@
 .hptl-ehr-assetment-details {
   background-color: #fbfbfb; }
   .hptl-ehr-assetment-details .grid-section {
+    background: #ffff;
     border: 1px solid #d3d3d3;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
