--- a/client/src/Components/Wrapper/loader.scss
+++ b/client/src/Components/Wrapper/loader.scss
@@ -3,7 +3,7 @@ $doneSpeed: 3.1s;
 $shadow: darken(#2ec079, 3%);
 
 .loader-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
