--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,9 @@
     margin-top: 10px; }
   :global .btn-primary {
     background-color: #00bcb0;
-    border: #00bcb0; }
+    border: #00bcb0;
+    text-transform: uppercase;
+    font-size: 0.9rem; }
   :global .btn-primary:hover {
     background-color: #00bcb0;
     border: #00bcb0; }
@@ -42,6 +44,19 @@
   :global .show > .btn-primary.dropdown-toggle {
     background-color: #00bcb0;
     border: #00bcb0; }
+  :global .btn-default {
+    background-color: #efefef;
+    border: 1px solid #efefef;
+    text-transform: uppercase;
+    font-size: 0.9rem; }
+  :global .btn-default:hover {
+    background-color: #00bcb0;
+    border: #00bcb0; }
+  :global .btn-default:not(:disabled):not(.disabled).active,
+  :global .btn-default:not(:disabled):not(.disabled):active,
+  :global .show > .btn-default.dropdown-toggle {
+    background-color: #efefef;
+    border: 1px solid #efefef; }
   :global .portlet {
     background: #fff;
     padding: 8px;
