--- a/client/src/Components/OPBilling/OPBilling/ReciptDetails/AddReciptForm.scss
+++ b/client/src/Components/OPBilling/OPBilling/ReciptDetails/AddReciptForm.scss
@@ -1,5 +1,6 @@
 .hptl-phase1-recipt-form {
-  background: #fff;
+  background: #e9feff;
+  border: 1px solid #44b8bd;
   border-radius: 5px;
 }
 
@@ -13,7 +14,7 @@
     color: red;
   }
   .form-details {
-    padding: 10px;
+    padding-top: 10px;
     padding-bottom: 0px;
   }
   .radio-design {
