--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails/DisplayVisitDetails.scss
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails/DisplayVisitDetails.scss
@@ -31,3 +31,10 @@
     border-right: 1px solid #e6e6e6;
   }
 }
+.gridWithRadio {
+  table {
+    th:first-child {
+      width: 16px !important;
+    }
+  }
+}
