Insurance and Investigation setup page UI cleanup

--- a/client/src/Components/InsuranceSetup/insurancesetup.css
+++ b/client/src/Components/InsuranceSetup/insurancesetup.css
@@ -1,7 +1,8 @@
 .insurancesetup {
   padding-top: 3%;
   padding-right: 3px;
-  padding-left: 3px; }
+  padding-left: 3px;
+  margin-bottom: 40px; }
   .insurancesetup .toggle-section {
     margin: 10px;
     margin-bottom: 0px; }
