--- a/client/src/index.css
+++ b/client/src/index.css
@@ -356,7 +356,7 @@
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4); }
     :global .algaeh-modal .popupHeader {
       background: #dbad64;
-      padding: 5px 16px; }
+      padding: 5px 15px 0; }
       :global .algaeh-modal .popupHeader h4 {
         color: #fff;
         font-size: 1.1rem;
@@ -372,24 +372,42 @@
         margin: 0;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         font-weight: bold; }
+      :global .algaeh-modal .popupHeader button {
+        margin: 0;
+        padding: 0;
+        font-size: 1.3rem;
+        float: right;
+        background: none;
+        border: none;
+        color: #fff;
+        line-height: 30px;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
+      :global .algaeh-modal .popupHeader button:hover {
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0); }
     :global .algaeh-modal .popupInner {
-      height: 70vh;
       overflow-y: auto;
       overflow-x: hidden; }
       :global .algaeh-modal .popupInner .popLeftDiv {
         border-right: 1px dashed #e0e0e0;
-        height: 70vh;
+        min-height: 30vh;
+        max-height: 70vh;
         overflow: auto;
         padding: 15px; }
       :global .algaeh-modal .popupInner .popRightDiv {
         border-right: 1px dashed #e0e0e0;
-        height: 70vh;
+        min-height: 30vh;
+        max-height: 70vh;
         overflow: auto;
         padding: 15px; }
     :global .algaeh-modal .popupFooter {
       border-top: 1px dashed #e0e0e0;
-      padding: 4px 10px;
+      padding-top: 4px;
+      padding-bottom: 4px;
       height: 40px; }
+      :global .algaeh-modal .popupFooter .button-left {
+        float: left;
+        margin-right: 10px;
+        margin-left: 0px; }
       :global .algaeh-modal .popupFooter button {
         float: right;
         margin-left: 10px;
@@ -403,8 +421,8 @@
         border: 1px solid #34b8bc; }
       :global .algaeh-modal .popupFooter .btn-default {
         background: #efefef;
-        color: #797979;
-        border: 1px solid #efefef; }
+        color: #5a5a5a;
+        border: 1px solid #adadad; }
   :global .tab-container .tab-button {
     font-size: 0.7rem;
     font-weight: normal;
@@ -674,3 +692,6 @@
   border: solid 1px #eceff1; }
   .tab-container .tab-content .tab-item {
     position: relative; }
+
+.hptl-phase1-footer {
+  margin-top: 50px; }
