--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -67,7 +67,7 @@ $forntSize: 0.7rem;
 
   .btn-default:not(:disabled):not(.disabled).active,
   .btn-default:not(:disabled):not(.disabled):active,
-  .show > .btn-default.dropdown-toggle {    
+  .show > .btn-default.dropdown-toggle {
     background-color: #efefef;
     border: 1px solid #efefef;
   }
@@ -488,7 +488,7 @@ $forntSize: 0.7rem;
 
     .popupHeader {
       background: #dbad64;
-      padding: 5px 16px;
+      padding: 5px 15px 0;
       h4 {
         color: #fff;
         font-size: 1.1rem;
@@ -506,29 +506,49 @@ $forntSize: 0.7rem;
         text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
         font-weight: bold;
       }
+      button {
+        margin: 0;
+        padding: 0;
+        font-size: 1.3rem;
+        float: right;
+        background: none;
+        border: none;
+        color: #fff;
+        line-height: 30px;
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+      }
+      button:hover {
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0);
+      }
     }
     .popupInner {
-      height: 70vh;
       overflow-y: auto;
       overflow-x: hidden;
       .popLeftDiv {
         border-right: 1px dashed #e0e0e0;
-        height: 70vh;
+        min-height: 30vh;
+        max-height: 70vh;
         overflow: auto;
         padding: 15px;
       }
       .popRightDiv {
         border-right: 1px dashed #e0e0e0;
-        height: 70vh;
+        min-height: 30vh;
+        max-height: 70vh;
         overflow: auto;
         padding: 15px;
       }
     }
     .popupFooter {
       border-top: 1px dashed #e0e0e0;
-      padding: 4px 10px;
+      padding-top: 4px;
+      padding-bottom: 4px;
       height: 40px;
-
+      .button-left {
+        float: left;
+        margin-right: 10px;
+        margin-left: 0px;
+      }
       button {
         float: right;
         margin-left: 10px;
@@ -544,8 +564,8 @@ $forntSize: 0.7rem;
       }
       .btn-default {
         background: #efefef;
-        color: #797979;
-        border: 1px solid #efefef;
+        color: #5a5a5a;
+        border: 1px solid #adadad;
       }
     }
   }
@@ -930,4 +950,7 @@ $forntSize: 0.7rem;
       position: relative;
     }
   }
+}
+.hptl-phase1-footer {
+  margin-top: 50px;
 }
