--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -61,7 +61,9 @@ div[numberbox="true"] {
     margin-left: 0px;
   }
 }
-
+.mandatory .algaeh-datePicker {
+  background: #fffff6;
+}
 // .algaeh-datePicker {
 //   border-bottom: 1px solid #6c757d;
 //   background-color: #fbfbfb;
