login_page ui tweak

--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -49,7 +49,7 @@
     margin-top: 10px; }
 
 .bg {
-  background-image: url("../../assets/images/login_bg.jpeg");
+  background-image: url("../../assets/images/login_bg.jpg");
   position: absolute;
   height: 100%;
   background-position: center center;
