--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -30,7 +30,7 @@
   }
   .loginFormContainer {
     padding: 15px;
-    margin:0 auto;
+    margin: 0 auto;
     background: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.12);
@@ -59,7 +59,7 @@
   }
 }
 .bg {
-  background-image: url("../../assets/images/login_bg.jpeg");
+  background-image: url("../../assets/images/login_bg.jpg");
   position: absolute;
   height: 100%;
   background-position: center center;
