--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -43,3 +43,29 @@
     }
   }
 }
+input[type="text"]:disabled {
+  background: white;
+  border: none;
+  color: #000;
+  font-weight: bold;
+}
+.is-disabled {
+  .Select-control {
+    background-color: #f9f9f9;
+    color: #000;
+    font-weight: bold;
+    border: none;
+  }
+  .Select-value {
+    background: #fff;
+    border-bottom: 1px dotted #949494;
+  }
+  .Select-arrow-zone {
+    display: none;
+  }
+}
+.algaeh-datePicker .react-date-picker--disabled {
+  button {
+    display: none;
+  }
+}
