--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -53,6 +53,29 @@ div[numberbox="true"] input[type="text"] {
 .mandatory input[type="text"] {
   background-color: #fff2f6; }
 
+input[type="text"]:disabled {
+  background: #f0f0f0;
+  border: 1px solid #d3d3d3;
+  color: #000;
+  font-weight: bold; }
+
+.is-disabled .Select-control {
+  border: 1px solid #d3d3d3; }
+
+.is-disabled .Select-value {
+  background: #f0f0f0;
+  color: #000;
+  font-weight: bold; }
+
+.is-disabled .Select-arrow-zone {
+  display: none; }
+
+.is-disabled .Select-placeholder {
+  background: #f0f0f0; }
+
+.algaeh-datePicker .react-date-picker--disabled button {
+  display: none; }
+
 .table-responsive {
   border: 1px solid #e2e2e2;
   border-radius: 4px; }
