UI tweak for Patient Reg.

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -544,6 +544,7 @@ $forntSize: 0.7rem;
       padding-top: 4px;
       padding-bottom: 4px;
       height: 40px;
+      margin-top: 15px;
       .button-left {
         float: left;
         margin-right: 10px;
