--- a/client/src/index.css
+++ b/client/src/index.css
@@ -403,7 +403,8 @@
       border-top: 1px dashed #e0e0e0;
       padding-top: 4px;
       padding-bottom: 4px;
-      height: 40px; }
+      height: 40px;
+      margin-top: 15px; }
       :global .algaeh-modal .popupFooter .button-left {
         float: left;
         margin-right: 10px;
