Login button border resolved

--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -35,8 +35,8 @@
     margin-top: 20px;
     margin-bottom: 0; }
   .login .sign-btn {
-    box-shadow: 0 7px 0 #35879a;
-    border: 1px solid #6bd1eb;
+    box-shadow: 0 5px 0 #2a7688;
+    border: 1px solid #48a0bb;
     background: #3a95aa;
     color: #fff; }
   .login .sign-btn:hover {
