--- a/client/src/Components/Login/Login.scss
+++ b/client/src/Components/Login/Login.scss
@@ -42,8 +42,8 @@
     margin-bottom: 0;
   }
   .sign-btn {
-    box-shadow: 0 7px 0 #35879a;
-    border: 1px solid #6bd1eb;
+    box-shadow: 0 5px 0 #2a7688;
+    border: 1px solid #48a0bb;
     background: #3a95aa;
     color: #fff;
   }
