--- a/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
+++ b/client/src/Components/RegistrationPatient/PatientDetails/PatientForm/PatientForm.scss
@@ -20,7 +20,10 @@
   .text_field {
     width: 100% !important;
     background-color: #fbfbfb;
-    margin-right: "5px";
+    margin-right: 5px;
+  }
+  .paddin-bottom-5 {
+    padding-bottom: 4px;
   }
 
   .secondary-details {
