--- a/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
+++ b/client/src/Components/PatientProfile/PhysicalExamination/physical_examination.scss
@@ -18,7 +18,7 @@
 
   /* timelineContainer around content */
   .timelineContainer {
-    padding: 5px 0 10px 5px;
+    padding: 5px 0 3px 5px;
     position: relative;
     width: 90%;
   }
@@ -42,10 +42,17 @@
 
   .content {
     position: relative;
-    padding: 4px 0 0 16px;
+    padding: 4px 0 13px 16px;
+    border-bottom: 2px dashed #cecece;
 
     .dateStamp {
       font-size: 0.8rem;
+      background: #2ebcb0;
+      color: #fff;
+      padding: 2px 10px;
+      margin: 0;
+      margin-bottom: 7px;
+      border-radius: 7px;
     }
     ul.vitals-box {
       margin: 0;
@@ -56,13 +63,15 @@
         margin: 5px 0 0;
         padding: 5px 10px;
         list-style: none;
-        border: 2px solid #cecece;
+        border: 1px solid #41bcaf;
         border-radius: 5px;
+        background: #fffbf3;
         p {
-          font-size: 0.9rem;
+          font-size: 0.8rem;
           margin: 0;
           padding: 0;
-          margin-bottom: 10px;
+          margin-bottom: 5px;
+          text-transform: uppercase;
         }
         span:first-child {
           font-size: 1.5rem;
