Popup added in the appointment screen

--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -45,3 +45,10 @@
 
 .appointment table tr {
   text-align: center; }
+
+.appointment table th {
+  color: #009e94; }
+
+.appointment table td i {
+  color: #009e94;
+  cursor: pointer; }
