--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -75,5 +75,14 @@
     tr {
       text-align: center;
     }
+    th {
+      color: #009e94;
+    }
+    td {
+      i {
+        color: #009e94;
+        cursor: pointer;
+      }
+    }
   }
 }
