--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1,7 +1,7 @@
 body {
   line-height: 1.45;
   font-family: "Open Sans", sans-serif;
-  background-color: #fafafa; }
+  background-color: #e9e9e9; }
 
 :global .header {
   max-height: 50px; }
