--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -2,7 +2,7 @@
 body {
   line-height: 1.45;
   font-family: $fontFamily;
-  background-color: #fafafa;
+  background-color: #e9e9e9;
 }
 :global {
   .header {
