--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -52,3 +52,42 @@
 .appointment table td i {
   color: #009e94;
   cursor: pointer; }
+
+.appointment .tg {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.appointment .tg td {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: black; }
+
+.appointment .tg th {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 10px 5px;
+  border-style: solid;
+  border-width: 1px;
+  overflow: hidden;
+  word-break: normal;
+  border-color: black; }
+
+.appointment .tg .tg-baqh {
+  text-align: center;
+  vertical-align: top; }
+
+.appointment .tg .tg-c3ow {
+  border-color: inherit;
+  text-align: center;
+  vertical-align: top; }
+
+.appointment .tg .tg-amwm {
+  font-weight: bold;
+  text-align: center;
+  vertical-align: top; }
