--- a/client/src/Components/Pharmacy/InitialStock/InitialStock.scss
+++ b/client/src/Components/Pharmacy/InitialStock/InitialStock.scss
@@ -2,6 +2,7 @@
   background: #ffff;
   border-radius: 5px;
   margin-top: 12vh;
+  min-height: 80vh;
   .form-details {
     padding: 5px;
     padding-bottom: 0px;
