--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -465,6 +465,31 @@ input[type="text"] {
   border-radius: 4px;
   background: #fff; }
 
+input[type="color"] {
+  font-size: 0.85rem;
+  -webkit-appearance: none;
+  width: 32px;
+  height: 29px;
+  padding: 0;
+  margin: 0;
+  border: 1px solid #d3d3d3;
+  border-radius: 4px;
+  overflow: hidden; }
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0; }
+
+input[type="color"]::-webkit-color-swatch {
+  border: none; }
+
+.color-picker-icon {
+  position: absolute;
+  top: 24px;
+  left: 16px;
+  background: #fff;
+  padding: 3px 6px;
+  color: #616161; }
+
 textarea {
   font-size: 0.85rem !important;
   padding: 8px 6px 7px !important;
