Appointment Room left and right contianer added

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -957,3 +957,20 @@ $forntSize: 0.7rem;
 .hptl-phase1-footer {
   margin-top: 50px;
 }
+.divInner {
+  overflow-y: auto;
+  overflow-x: hidden;
+  .divInnerLeft {
+    border-right: 1px dashed #e0e0e0;
+    min-height: 30vh;
+    max-height: 70vh;
+    overflow: auto;
+    padding: 15px;
+  }
+  .divInnerRight {
+    min-height: 30vh;
+    max-height: 70vh;
+    overflow: auto;
+    padding: 15px;
+  }
+}
